[gd_scene load_steps=2 format=2]

[ext_resource path="res://levels/phase.gd" type="Script" id=1]

[node name="Phase" type="Node2D"]

script = ExtResource( 1 )
wait_time = 1.0
wave_duration = 10.0

[node name="SpawnPositions" type="Node2D" parent="." index="0"]

[node name="Children" type="Node2D" parent="." index="1"]

[node name="SpawnTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="EndTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false


